--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xrdp (0.9.80-1) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- Foo <foobar@debian.org>  Wed, 07 Sep 2025 12:08:42 +0200
+
 xrdp (0.9.21.1-1) unstable; urgency=medium
 
   * New upstream version. (Closes: #1025879)
